[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Scenes/End Screen.gd" type="Script" id=1]
[ext_resource path="res://assets/title screen/background.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/FFFFORWA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sounds/Menu/MenuMusic.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[node name="End Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.52588e-005
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 456.0
margin_bottom = 256.0
texture = ExtResource( 2 )

[node name="Titel Schatten" type="Label" parent="."]
anchor_right = 1.0
margin_top = 20.9842
margin_bottom = 60.984
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1

[node name="Titel Text" type="Label" parent="Titel Schatten"]
anchor_right = 1.0
margin_top = -4.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1

[node name="ScoreSchatten" type="Label" parent="."]
anchor_right = 1.0
margin_top = 63.9842
margin_bottom = 103.984
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1

[node name="Score" type="Label" parent="ScoreSchatten"]
anchor_right = 1.0
margin_top = -4.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1

[node name="Button_Start" type="Button" parent="."]
margin_left = 140.0
margin_top = 126.728
margin_right = 310.0
margin_bottom = 156.728
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="Butto_Menu" type="Button" parent="."]
margin_left = 140.0
margin_top = 176.728
margin_right = 310.0
margin_bottom = 206.728
custom_fonts/font = SubResource( 2 )
text = "Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Click" type="AudioStreamPlayer" parent="."]
volume_db = 10.0
[connection signal="pressed" from="Button_Start" to="." method="_on_Button_Start_pressed"]
[connection signal="pressed" from="Butto_Menu" to="." method="_on_Butto_Menu_pressed"]
